Move dedicated worker MojoUkmRecorder creation to worker thread

Bug: 881144
Change-Id: Idc5292cecf9a3d4dbc101a9c44c47bd3db62dab6
Reviewed-on: https://chromium-review.googlesource.com/1208941
Reviewed-by: Alexander Timin <altimin@chromium.org>
Reviewed-by: Ken Rockot <rockot@chromium.org>
Reviewed-by: Kenneth Russell <kbr@chromium.org>
Commit-Queue: Kai Ninomiya <kainino@chromium.org>
Cr-Commit-Position: refs/heads/master@{#590088}