third_party/blink/renderer/platform/scheduler/worker/worker_thread_scheduler.h
@@ -26,6 +26,10 @@ class SequenceManager;
 }
 }  // namespace base
 
+namespace service_manager {
+class Connector;
+}
+
 namespace ukm {
 class UkmRecorder;
 }
@@ -161,6 +165,7 @@ class PLATFORM_EXPORT WorkerThreadScheduler
   const FrameStatus initial_frame_status_;
 
   const ukm::SourceId ukm_source_id_;
+  std::unique_ptr<service_manager::Connector> connector_;
   std::unique_ptr<ukm::UkmRecorder> ukm_recorder_;
 
   DISALLOW_COPY_AND_ASSIGN(WorkerThreadScheduler);
